--- a/cpp_optimization_example/Makefile
+++ b/cpp_optimization_example/Makefile
@@ -5,7 +5,8 @@ MKDIR_P=mkdir -p
 OBJS_DIR=objs
 DEPENDS_FILE=${OBJS_DIR}/.depend
 YAML_OUTPUT_DIR=yaml_optimization_remarks
-CPPFLAGS=-O3
+OPTIMIZATION_RECORD_FLAGS=-fsave-optimization-record -foptimization-record-file=./${YAML_OUTPUT_DIR}/$(patsubst %.o,%.opt.yaml,$(notdir $@))
+CPPFLAGS=-O3 -std=c++17
 LDFLAGS=
 LDLIBS=
 BINARY_NAME=example
@@ -26,7 +27,7 @@ ${BINARY_NAME}: $(OBJS)
 	$(CXX) $(LDFLAGS) -o $(BINARY_NAME) $(OBJS) $(LDLIBS)
 
 ${OBJS_DIR}/%.o : %.cc
-	$(CXX) -c $(CFLAGS) $(CPPFLAGS) -fsave-optimization-record -foptimization-record-file=./${YAML_OUTPUT_DIR}/$(patsubst %.o,%.opt.yaml,$(notdir $@)) $< -o $@
+	$(CXX) -c $(CFLAGS) $(CPPFLAGS) $(OPTIMIZATION_RECORD_FLAGS) $< -o $@
 
 depend: $(DEPENDS_FILE)
 
@@ -35,7 +36,8 @@ $(DEPENDS_FILE): $(SRCS)
 	$(MKDIR_P) ${YAML_OUTPUT_DIR} ${OBJS_DIR}
 	$(CXX) $(CPPFLAGS) -MM $^ >> $(DEPENDS_FILE)
 
+include $(DEPENDS_FILE)
+
 clean:
 	$(RM) -r ${YAML_OUTPUT_DIR} ${OBJS_DIR}
 
-include $(DEPENDS_FILE)
