Refactor entire config file usage, add defaults for exclude_names, exclude_text

--- a/config.yaml
+++ b/config.yaml
@@ -1,14 +1,16 @@
+---
 ## Opt view config
 
 # Set this to false to disable remark_filters list
 use_remark_filters: true
-# Only display optimization remarks with names matching filter regex
-remark_filters:
-  - nop
-  - bla
+
+# Exclude optimization remarks with names matching this regex:
+exclude_names: NeverInline|NotPossible
+# Exclude optimization remarks with text matching this regex:
+exclude_text: ^std\:\:|^__dynamic_cast|^operator new|^operator delete|^__cxa|^__clang
 
 # Collect all optimization remarks, not just failures
-collect_all_remakrs: False
+collect_opt_success: False
 
 # Maximum number of the hottest remarks to appear on the index page
 max_hottest_remarks_on_index: 1000
