--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,12 @@
 # Set this to false to disable remark_filters list
 use_remark_filters: true
 
-# Exclude optimization remarks with names matching this regex:
+# Exclude optimization remarks with names matching this regex.
+# Empirical list of remark names (as of clang14):
+# LoopSpillReloadCopies, LoadWithLoopInvariantAddressInvalidated, MissedDetails, LoadClobbered,
+# NotBeneficial, SpillReloadCopies, NotPossible, NoDefinition, NeverInline, UnsupportedIrreducibleCFG,
+# VectorizationNotBeneficial, LoadWithLoopInvariantAddressCondExecuted, HorSLPNotBeneficial, TooCostly
+# LoopMayAccessStore
 exclude_names: NeverInline|NotPossible|LoopSpillReloadCopies
 # Exclude optimization remarks with text matching this regex:
 exclude_text: ^std\:\:|^__dynamic_cast|^operator new|^operator delete|^__cxa|^__clang
